# tpa-homework1

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: ENRICCamValve.h  LBAMTTBiellaManovella.h  LBAMTTcadSVG.h  LBAMTTdevice.h  LBAMTTmotor.h
src/: ENRICCamValve.cpp  LBAMTTBiellaManovella.cpp  LBAMTTcadSVG.cpp  LBAMTTdevice.cpp  LBAMTTmotor.cpp
tests/: CMakeLists.txt  ENRICtestCamValve.cpp  LBAMTTtestBiellaManovella.cpp  LBAMTTtestCadSVG.cpp  LBAMTTtestDevice.cpp  LBAMTTtestMotor.cpp  catch2Main.cpp
